--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <!-- <base href="https://androidism.github.io"> -->
-  <base href="/">
+  <base href="https://ismailtech365.github.io/sitenkotasks.github.io/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
